# todo_app

./: .gitignore
api/: pyproject.toml
api/api/: api.py  dynamo.py  model.py
api/tests/: test_model.py
