[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["James Lowry <jl@balkerne.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.73"
colander = "^1.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
